codex-rs/astral-tui/src/view/snapshots/astral_tui__view__transcript__tests__dense_tool_run_collapsed.snap
---
source: astral-tui/src/view/transcript_tests.rs
expression: collapsed
---
◈ Ran 3 commands
◆ Run echo command-3
◆ Run echo command-4
◆ Run echo command-5
◆ Run echo command-6
◆ Run echo command-7
◆ Run echo command-8
◆ Run echo command-9
◆ Run echo command-10
◆ Run echo command-11
◆ Run echo command-12
