codex-rs/astral-tui/src/view/snapshots/astral_tui__view__transcript__tests__transcript_raw_markdown.snap
---
source: astral-tui/src/view/transcript_tests.rs
expression: raw
---
**bold** [link](https://example.com)

◆ Thought
  ## source

  `literal`
